# Ouro

./: .gitignore  README.md  pyproject.toml
ouro/: __init__.py  __main__.py  config.py  main.py  utils.py
ouro/api/: schemas.py  server.py
ouro/api/routes/: chat.py  models.py
ouro/cli/: create.py  list_cmd.py  main.py  ps.py  pull.py  rm.py  run.py  scan.py  serve.py  service.py  welcome.py
ouro/engine/: __init__.py  generate.py  loader.py  prompt_builder.py  tool_parser.py
ouro/registry/: __init__.py  manifest.py  scanner.py  storage.py
