[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ouro"
version = "0.1.0"
description = "MLX-native model runner and OpenAI-compatible server for Apple Silicon"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
keywords = ["mlx", "llm", "apple-silicon", "openai", "model-runner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx-lm>=0.19.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "huggingface-hub>=0.23.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ouro = "ouro.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ouro*"]
